syntax = "proto3";

package org.project_planton.app.stackupdate.v1;

import "google/protobuf/timestamp.proto";
import "org/project_planton/app/commons/page_info.proto";
import "org/project_planton/app/stackupdate/v1/api.proto";

// Request message for deploying a cloud resource.
message DeployCloudResourceRequest {
  // The unique identifier of the cloud resource to deploy.
  string cloud_resource_id = 1;
  // Provider credentials are automatically resolved from the database
  // based on the environment and provider type. No need to provide credentials in the request.
}

// Response message containing the created stack-update.
message DeployCloudResourceResponse {
  // The created stack-update.
  StackUpdate stack_update = 1;
}

// Request message for retrieving a stack-update by ID.
message GetStackUpdateRequest {
  // The unique identifier of the stack-update.
  string id = 1;
}

// Response message containing the retrieved stack-update.
message GetStackUpdateResponse {
  // The requested stack-update.
  StackUpdate stack_update = 1;
}

// Request message for listing stack-updates.
message ListStackUpdatesRequest {
  // Optional filter by cloud resource ID.
  string cloud_resource_id = 1;
  // Optional filter by status (success, failed, in_progress).
  string status = 2;
  // Pagination parameters (optional). If not provided, returns all stack-updates.
  org.project_planton.app.commons.PageInfo page_info = 3;
}

// Response message containing a list of stack-updates.
message ListStackUpdatesResponse {
  // List of stack-updates.
  repeated StackUpdate stack_updates = 1;
  // Total number of pages available (only set when page_info is provided).
  int32 total_pages = 2;
}

// Request message for streaming stack-update output.
message StreamStackUpdateOutputRequest {
  // The unique identifier of the stack-update to stream output from.
  string job_id = 1;
  // Optional: Last sequence number received (for resuming stream).
  int32 last_sequence_num = 2;
}

// Response message containing a streaming output chunk.
message StreamStackUpdateOutputResponse {
  // Sequence number of this chunk (for ordering).
  int32 sequence_num = 1;
  // The output content (line or chunk).
  string content = 2;
  // Stream type: "stdout" or "stderr".
  string stream_type = 3;
  // Timestamp when this chunk was received.
  google.protobuf.Timestamp timestamp = 4;
  // Status of the stream: "streaming", "completed", "failed".
  string status = 5;
}
